# tutorial-cmake

./: .gitattributes  README.md
app/gcc-cross-compile-cmake-arm/: Dockerfile  arch-arm64.cmake  readme.md
app/gcc-cross-compile-cmake-arm/libs/curl/: install.sh
app/gcc-cross-compile-cmake-arm/libs/date/: install.sh
app/gcc-cross-compile-cmake-arm/src/: CMakeLists.txt  main.cpp  run.sh
app/gcc-cross-compile-cmake-linux/: Dockerfile
app/gcc-linux-abi/: Dockerfile  dockerw.bat  readme.md
app/gcc-linux-abi/conf/backward/: Dockerfile
app/gcc-linux-abi/conf/upward/: Dockerfile
app/gcc-linux-abi/libs/: abi-info.sh  install.sh
app/gcc-linux-arm-cmake/: .gitignore  Dockerfile  dockerw.bat  readme.md
app/gcc-linux-cmake/: .gitignore  Dockerfile  dockerw.bat  readme.md
app/gcc-linux-cmake/src/: CMakeLists.txt  run.sh
app/issue-glib/: CMakeLists.txt  main.cpp  readme.md
app/vs-win-cmake-ssh/: .gitignore  Dockerfile  dockerw.bat  readme.md
app/vs-win-cmake-ssh/CMakeApp/: CMakeApp.h  CMakeLists.txt  CMakePresets.json  CMakeSettings.json
app/vs-win-cmake-ssh/libs/boost/: install.sh
app/vs-win-cmake-win/: .gitignore  install.bat  readme.md
app/vs-win-cmake-win/CMakeApp/: CMakeApp.cpp  CMakeLists.txt  CMakePresets.json
app/vs-win-cmake-wsl/: .gitignore  install.bat  readme.md
app/vs-win-cmake-wsl/CMakeApp/: CMakeApp.cpp  CMakeLists.txt  CMakeSettings.json
app/vs-win-cmake-wsl/libs/boost/: install.sh
app/vs-win-console/: .gitignore  install.bat  readme.md
app/vs-win-console/ConsoleApp/: ConsoleApp.cpp  ConsoleApp.sln  ConsoleApp.vcxproj  ConsoleApp.vcxproj.filters
demo/: .gitignore  dockerw.bat  readme.md
demo/libs/boost/: install.sh
demo/src/: run.sh
demo/src/3party-header-only-library/: CMakeLists.txt  main.cpp  standalone.bat
demo/src/3party-header-only-library/libs/: CMakeLists.txt  fun.cpp  fun.h
demo/src/3party-integrate-library/: CMakeLists.txt  main.cpp  standalone.bat
demo/src/configure/: CMakeLists.txt  def.h.in  main.cpp
demo/src/executable/: CMakeLists.txt
demo/src/filesystem/: CMakeLists.txt  main.cpp
demo/src/filesystem/classes/: test_class.cpp  test_class.h
demo/src/find-package/: CMakeLists.txt
demo/src/global-vs-target-include/: CMakeLists.txt  main.cpp
demo/src/global-vs-target-include/global/: global.h
demo/src/global-vs-target-include/target1/: target.h
demo/src/global-vs-target-include/target2/: target.h
demo/src/info/: CMakeLists.txt  main.cpp
demo/src/inheritance/: CMakeLists.txt  main_interface.cpp  main_private.cpp  main_public.cpp  readme.md
demo/src/inheritance/classes/: CMakeLists.txt  class_interface.cpp  class_private.cpp  class_public.cpp  tclass.h
demo/src/inheritance/classes/interface/: interface.h
demo/src/inheritance/classes/private/: private.h
demo/src/inheritance/classes/public/: public.h
demo/src/project/: CMakeLists.txt
